# cmake_win_lib_dll

./: README.md
demo/: CMakeLists.txt
demo/hwlib/include/: lib.h
demo/hwlib/lib/: hwlib_shared.lib  hwlib_static.lib
demo/src/: main.c
hwlib/: CMakeLists.txt
hwlib/src/: lib.c
